# Shardine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Shardine_es.ts  tr.qrc  vcpkg.json
src/: main.cpp
src/contr/: Controller.cpp  Controller.h  OperationStack.cpp  OperationStack.h  SegmentInfo.h
src/filesystem/: Factory.cpp  Factory.h  Field.h  FileSystem.h  MinixAdapter.cpp  MinixAdapter.h  Segment.h  Structure.h
src/minix/: INode.h  MinixFS.cpp  MinixFS.h  SuperBlock.h
src/qt-utils/: MountableDevice.h  Operation.h  qtutils.h
src/ui/: CreateFS.cpp  CreateFS.h  CreateFS.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SegmentModel.h  StructureModel.cpp  StructureModel.h  images.qrc
src/utils/: BitMap.cpp  BitMap.h  project.h.in  strmode.h  utils.h
test/: CMakeLists.txt  FieldTest.cpp
